# libsxp

./: .gitignore  CMakeLists.txt  main.cpp  main_big_sxp_test.cpp
include/asset/: AssetReader.h  AssetWriter.h  EmbeddedAsset.h
include/checksum/: ChecksumKind.h
include/chunk/: ChunkHeader.h  ChunkId.h  ChunkReader.h  ChunkWriter.h
include/core/: Error.h  Result.h
include/file/: FileReader.h  FileWriter.h
include/path/: PathSanitizer.h
include/project/: ProjectDocumentCodec.h  ProjectFile.h  ProjectGenerator.h  ProjectGeneratorType.h  ProjectHeaderCodec.h  ProjectPatternNote.h  ProjectSamplerState.h  ProjectTrack.h
include/stream/: BinaryReader.h  BinaryWriter.h
include/sxp/asset/: AssetId.h  AssetKind.h  AssetManifest.h  AssetReader.h  AssetWriter.h
include/sxp/chunk/: ChunkEntry.h  ChunkReader.h  ChunkWriter.h
include/sxp/core/: ErrorCode.h  Result.h
include/sxp/file/: FileReader.h  FileWriter.h
include/sxp/project/: ProjectArrangementClip.h  ProjectAsset.h  ProjectDocument.h  ProjectDocumentCodec.h  ProjectFile.h  ProjectHeader.h  ProjectHeaderCodec.h  ProjectPattern.h  ProjectSamplerState.h  ProjectSectionHeader.h  ProjectSectionId.h
include/sxp/project/generator_payload/: GeneratorPayloadCodec.h  OscillatorPayload.h  PayloadReaderContext.h  SamplerPayload.h
include/sxp/stream/: BinaryReader.h  BinaryWriter.h  ReadLimits.h
include/sxp/sxp_format/: TableOfContents.h
include/sxp_format/: Header.h  SxpFormat.h  TableOfContents.h
src/asset/: AssetManifest.cpp  AssetReader.cpp  AssetWriter.cpp
src/chunk/: ChunkReader.cpp  ChunkWriter.cpp
src/core/: Error.cpp
src/file/: FileReader.cpp  FileWriter.cpp
src/path/: PathSanitizer.cpp
src/project/: ProjectDocumentCodec.cpp  ProjectFile.cpp  ProjectHeaderCodec.cpp
src/project/generator_payload/: GeneratorPayloadCodec.cpp
src/stream/: BinaryReader.cpp  BinaryWriter.cpp
src/sxp_format/: TableOfContents.cpp
